--- a/easing/sample.html
+++ b/easing/sample.html
@@ -1,41 +1,24 @@
 <!doctype html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="format-detection" content="address=no"/>
+    <meta name="format-detection" content="email=no"/>
     <title>Easing</title>
+    <link rel="stylesheet" type="text/css" media="all" href="../_common/reset.css"/>
 </head>
 <body>
-    <canvas id="canvas" width="400" height="600" style="background-color: #000;"></canvas>
+    <canvas id="canvas" width="320" height="480" style="background-color: #000;"></canvas>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+<script src="ball.js"></script>
+<script src="stage.js"></script>
 <script>
-(function(w) {
-    var doc = document,
-        canvas  = doc.getElementById('canvas'),
-        loop,
-        clear,
-        app;
-
-    if ( !canvas || !canvas.getContext ) {
-        return false;
-    }
-
-    // stageの作成
-    w.stage = w.stage || canvas.getContext('2d');
-    stage.stageWidth  = canvas.width;
-    stage.stageHeight = canvas.height;
-    w.stage = stage;
-
-    clear = function() {
-        stage.clearRect( 0, 0, stage.stageWidth, stage.stageHeight );
-    }
-
-    loop = function() {
-        clear();
-    }
-
-    setInterval(function(){ loop(); }, 30);
-
-
-})(window);
+$(function(){
+    window.app.init();
+});
 </script>
 </body>
 </html>
