--- a/hotaru/hotaru.html
+++ b/hotaru/hotaru.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="address=no"/>
     <meta name="format-detection" content="email=no"/>
     <title>Hotaru</title>
-    <link rel="stylesheet" type="text/css" media="all" href="../_common/reset.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="../asset/css/reset.css"/>
 </head>
 <body>
     <canvas id="canvas" width="320" height="480" style="background-color: #000;"></canvas>
