--- a/physics/physics.html
+++ b/physics/physics.html
@@ -7,14 +7,14 @@
     <meta name="format-detection" content="address=no"/>
     <meta name="format-detection" content="email=no"/>
     <title>Easing</title>
-    <link rel="stylesheet" type="text/css" media="all" href="../_common/reset.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="../asset/css/reset.css"/>
 </head>
 <body>
     <canvas id="canvas" width="320" height="480" style="background-color: #000;"></canvas>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-<script src="ball.js"></script>
+<script src="../asset/js/jquery-2.1.3.js"></script>
 <script src="stage.js"></script>
+<script src="ball.js"></script>
 <script>
 $(function(){
     window.app.init();
